[package]
name = "rust-quepaxa"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust-native QuePaxa consensus core"
repository = "https://github.com/cbighea/rust-quepaxa"
readme = "README.md"
rust-version = "1.88"
keywords = ["consensus", "quepaxa", "paxos", "distributed", "replication"]
categories = ["algorithms", "concurrency"]

[features]
default = []
network = [
    "dep:futures-util",
    "dep:postcard",
    "dep:serde",
    "dep:serde_json",
    "dep:sha2",
    "dep:tokio",
    "dep:tokio-rustls",
    "dep:tokio-util",
    "dep:tracing",
]

[dependencies]
futures-util = { version = "0.3.32", optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
tokio = { version = "~1.51", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"], optional = true }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"], optional = true }
tokio-util = { version = "0.7", features = ["rt"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
rcgen = { version = "0.13.2", default-features = false, features = ["crypto", "ring"] }

[[example]]
name = "networked_cluster"
required-features = ["network"]

[[example]]
name = "chaos_proxy"
required-features = ["network"]

[[example]]
name = "wan_harness"
required-features = ["network"]

[[example]]
name = "load_generator"
required-features = ["network"]

[[bench]]
name = "consensus"
harness = false
